# SW_SEM6

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  docker_compose.yaml  docker_compose_brokerless.yaml  test_producer.py  test_receiver.py
client_scripts/: README.md  Requirements.txt  client.py  go_board_recognition.py  server_connection.py  stringify_results.py  test_producer.py  test_receiver.py  test_server_connection.py  train.py
client_scripts/ogs_scripts/utility/: ogsrest.py
client_scripts/yaml/: yolo_go.yaml
console/: config.yaml  console.py
local_broker/: README.md  mosquitto.conf
ogs_scripts/: test.py
ogs_scripts/utility/: ogsrealtime.py  ogsrest.py
server_app/: .dockerignore  CMakeLists.txt  Dockerfile  README.md  config.yaml  main.cpp  session.py
server_app/hdr/: control_thread.hpp  main.hpp
server_app/ogs_scripts/: __init__.py  create_demo_board.py  ogsrealtime.py  ogsrest.py  test.py
server_app/src/: control_thread.cpp  main.cpp
